# -_core_war_

./: .gitignore  CMakeLists.txt  Makefile  a.out  asm  author  corewar  main.c
libft/: .gitignore  CMakeLists.txt  Makefile  src.mk
libft/includes/: ft_printf.h  libft.h
libft/sources/ft_list/: Makefile  ft_lstadd.c  ft_lstappend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfind.c  ft_lstfold.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstrm.c  ft_lsttail.c
libft/sources/ft_memory/: Makefile  ft_bzero.c  ft_endian.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memmove.c  ft_memset.c  ft_swap.c
libft/sources/ft_printf/: Makefile
libft/sources/ft_string/: Makefile  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_iswhspace.c  ft_itoa.c  ft_itoabase.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strappend.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strrchr.c  ft_strslen.c  ft_strsplit.c  ft_strsplitlen.c  ft_strstr.c  (+6 more)
vm/: CMakeLists.txt  Makefile  alert.c  arguments.c  codage.c  corewar  fill_champ.c  func_fork.c  func_ld.c  func_math.c  func_misc.c  func_st.c  funct_test_v  functions.c  functions.h  g_operations.c  game.c  init_champion.c  initialisation.c  logger.c  main.c  op.h  param_values.c  sort_champs.c  tmp.c  utilities.c  vm.h
vm/temp/: Makefile  check_old_process.c  functions.h  initialize_op.c  main.c  recognize_op.c  recognize_op2.c
vm/temp/from_scratch/: cycle.c  (+9 more)
(+304 files in other folders)
